# bwr-plots

./: .env  .gitignore  README.md  app.py  pyproject.toml  repomix.config.json
.cursor/rules/: debugging.mdc  powershell-commands.mdc  tests.mdc
.notes/: ARCHITECT.md  ARCHITECT_PROMPT.md  TO_DO_LIST.md  __commands__.md  _common_commands.md
.project/: REFACTOR_CHECKLIST.md  REFACTOR_FRONTEND.md
backend/: Dockerfile  README.md  main.py  requirements.txt
backend/api/routes/: data.py
data/test_data/: MY_SCENARIO_ANALYSIS.xlsx  bar_test.csv  multi_time_series_test.csv  single_time_series_test.csv
examples/: demo_bar.py  demo_horizontal_bar.py  demo_metric_share_area.py  demo_multi_bar.py  demo_plotly_table.py  demo_scatter.py  demo_scatter_multi.py  demo_stacked_bar.py  demo_table.py  minimal_area_plot.py  plot_api_example.py  run_all_examples.py  simple_demo.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/api/plots/generate/: route.ts
frontend/src/app/api/plots/types/: route.ts
frontend/src/components/forms/: FormField.tsx  FormSection.tsx  FormValidation.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx  index.ts
frontend/src/components/plotting/: PlotConfiguration.tsx  PlotDisplay.tsx  PlotTypeSelector.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  LoadingSpinner.tsx  Select.tsx  Tabs.tsx
frontend/src/hooks/: useDataUpload.ts  usePlotGeneration.ts  useSession.ts
frontend/src/lib/: api.ts
frontend/utils/: plot_generator.py
output/: bar.html  bar_chart.html  horizontal-bar.html  horizontal_bar_chart.html  metric-share.html  metric_share_area_plot.html  multi-bar.html  multi_bar_chart.html  sales_table_by_product.html  scatter.html  scatter_plot.html  sol_performance_vs_btc_and_eth.html  stacked_bar.html  stacked_bar_chart.html  table_chart.html
src/bwr_plots/: __init__.py  aggrid_table.py  config.py  core.py  table_config.py  utils.py
src/bwr_plots/charts/: bar.py  horizontal_bar.py  metric_share_area.py  multi_bar.py  scatter.py  stacked_bar.py  table.py
tests/: README_BACKEND_TESTS.md  run_backend_tests.py  test_backend_integration.py  test_legends.py  test_watermark.py  test_yaxis_grid_params.py
