[tool.poetry]
name = "bwr-plots"
version = "0.1.0"
description = "Blockworks Research Plotting Library"
authors = ["Daniel <daniel.shapiro@blockworks.co>"]
readme = "README.md"
packages = [
    {include = "bwr_plots", from = "src"},
    {include = "backend"}
]

[tool.poetry.dependencies]
python = "^3.10"
# Data processing dependencies
pandas = ">=2.0.0"
plotly = ">=5.10.0"
numpy = ">=1.20.0"
openpyxl = ">=3.1.5,<4.0.0"
# Streamlit dependencies
termcolor = ">=1.1.0"
streamlit = ">=1.4.1,<2.0.0"
streamlit-aggrid = "==0.3.4.post3"
# FastAPI backend dependencies
fastapi = "==0.104.1"
uvicorn = {extras = ["standard"], version = "==0.24.0"}
python-multipart = "==0.0.6"
pydantic = "==2.5.0"
pydantic-settings = "==2.1.0"
redis = "==5.0.1"
aiofiles = "==23.2.0"
structlog = "==23.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "==0.21.1"
httpx = "==0.25.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"